
class Pixel {
    private char valor;
    
    public Pixel(char valor) {
        this.valor = valor;
    }
    
    public char getValor() {
        return valor;
    }
}